[package]
name = "com_ptr"
version = "0.1.0"
authors = ["LNSEAB <lnseab@gmail.com>"]
edition = "2018"

[dependencies]

[target.'cfg(all(windows, not(test)))'.dependencies]
winapi = { version = "0.3.6", features = [
	"combaseapi",
	"unknwnbase",
] }

[target.'cfg(all(windows, test))'.dependencies]
winapi = { version = "0.3.6", features = [
	"combaseapi",
	"unknwnbase",
	"objbase",
	"wincodec",
] }