[package]
name = "com_ptr"
version = "0.2.1"
authors = ["LNSEAB <lnseab@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/LNSEAB/com_ptr"
readme = "README.md"
keywords = ["windows", "win32", "winapi", "COM"]
description = "A smart pointer for Windows COM Interfaces"

[dependencies]
winapi = { version = "0.3.9", features = [
	"combaseapi",
	"unknwnbase",
	"winbase",
] }

[dev-dependencies]
anyhow = "1.0.38"
winapi = { version = "0.3.9", features = [
	"combaseapi",
	"unknwnbase",
	"objbase",
	"wincodec",
	"winbase",
] }
